add more info about weather and style

--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,6 @@
         <title>Weather App</title>
     </head>
     <body>
-        <div id="content">hello</div>
+        <div id="content"></div>
     </body>
 </html>
